[gd_scene load_steps=2 format=3 uid="uid://dbnwv07v65ebq"]

[ext_resource type="Script" path="res://add_score.gd" id="1_jlcyh"]

[node name="AddScore" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jlcyh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Home" type="Button" parent="."]
layout_mode = 0
offset_left = 319.0
offset_top = 16.0
offset_right = 374.0
offset_bottom = 47.0
text = "Home"

[node name="UpdateScores" type="Button" parent="."]
layout_mode = 0
offset_left = 170.0
offset_top = 16.0
offset_right = 289.0
offset_bottom = 47.0
text = "Update scores"

[node name="GW" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 20.0
offset_right = 77.0625
offset_bottom = 51.0
placeholder_text = "GW"
alignment = 1

[node name="Match" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 20.0
offset_right = 147.063
offset_bottom = 51.0
placeholder_text = "Match"
alignment = 1

[node name="HomeGoals" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 60.0
offset_right = 110.0
offset_bottom = 91.0
placeholder_text = "Home goals"
alignment = 1

[node name="AwayGoals" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 60.0
offset_right = 215.0
offset_bottom = 91.0
placeholder_text = "Away goals"
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="Confirm" type="Button" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 764.0
offset_right = 380.0
offset_bottom = 834.0
text = "Confirm"

[connection signal="pressed" from="UpdateScores" to="." method="_on_update_scores_pressed"]
[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
